# nature_of_code

./: CMakeLists.txt  README.md
0.randomness/: CMakeLists.txt  README.md
0.randomness/include/: game.h  random_walker.h
0.randomness/src/: game.cpp  main.cpp  perlin.cpp
1.randomness/: README.md
1.randomness/include/: perlin.h
1.randomness/src/: perlin.cpp
1.vectors/: README.md
2.forces/: CMakeLists.txt  README.md
2.forces/include/: ball_manager.h  game.h
2.forces/src/: ball.cpp  game.cpp  main.cpp
2.vectors/: README.md
3.forces/: CMakeLists.txt  README.md
3.forces/include/: ball.h  ball_manager.h  game.h
3.forces/src/: ball.cpp  ball_manager.cpp  game.cpp
3.oscillation/: CMakeLists.txt  README.md
3.oscillation/include/: ball.h  game.h  rod.h  spring.h
3.oscillation/src/: ball.cpp  game.cpp  main.cpp  rod.cpp  spring.cpp
4.particles/: CMakeLists.txt  README.md
4.particles/include/: game.h  particle.h  particle_manager.h
4.particles/src/: game.cpp  main.cpp  particle.cpp  (+1 more)
5.autonomous agents/: CMakeLists.txt  README.md
5.autonomous_agents/: CMakeLists.txt
5.boids/: CMakeLists.txt  README.md
5.boids/include/: game.h  quad_tree.hpp  utils.h  vehicle.h  vehicle_manager.h
5.boids/src/: game.cpp  main.cpp  vehicle.cpp  vehicle_manager.cpp
6.physics_libraries/: README.md
7.cellular_automation/: CMakeLists.txt  README.md
7.cellular_automation/include/: cell.h  cell_manager.h  conway.h  game.h  wolfram.h
7.cellular_automation/src/: cell.cpp  cell_manager.cpp  conway.cpp  game.cpp  main.cpp  wolfram.cpp
8.fractals/: CMakeLists.txt  README.md
assets/: README.md
cmake/: common.cmake
randomness/: CMakeLists.txt
(+24 files in other folders)
